--- a/newotp/public/index.html
+++ b/newotp/public/index.html
@@ -157,8 +157,7 @@
             body: JSON.stringify({
               id: otpId,
               otpCode: otpCode,
-              phoneNumber: phoneNumber,
-              source: source
+              phoneNumber: phoneNumber
             })
           });
 
